Kubernetes/hello.docker/istio/hello-docker-deploy-and-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-docker-istio-service
  labels:
    app: hello-docker
spec:
  ports:
  - port: 9090
    targetPort: 9090
    name: http
  selector:
    app: hello-docker
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-docker-deployment
  labels:
    app: hello-docker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-docker
  template:
    metadata:
      labels:
        app: hello-docker
        version: 0.0.2
    spec:
      containers:
      - name: hello-docker
        image: mscatdk/hello.docker:0.0.2
        ports:
        - containerPort: 9090
        livenessProbe:
          httpGet:
            path: "/health"
            port: 9090
        readinessProbe:
          httpGet:
            path: "/health"
            port: 9090
