Kubernetes/hello.docker/istio/hello-docker-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hello-docker-virtualservice
spec:
  hosts:
  - "*"
  gateways:
  - hello-docker-gateway
  http:
  - route:
    - destination:
        host: hello-docker-istio-service
